# sb-calculators

./: Cargo.toml  Dockerfile  README.md  cata_calc.js  index.html  wrangler.toml
.github/workflows/: deploy.yml
assets/: manifest.json  sw.js
assets/attribute_shards/: shard_data.json
assets/dungeon_loot/f1/: diamond.json  emerald.json  gold.json  obsidian.json  wood.json
assets/dungeon_loot/f2/: diamond.json  emerald.json  gold.json  obsidian.json
assets/dungeon_loot/f3/: gold.json  obsidian.json
assets/dungeon_loot/f4/: diamond.json  gold.json
assets/dungeon_loot/f5/: emerald.json  wood.json
assets/dungeon_loot/f6/: bedrock.json  wood.json
assets/dungeon_loot/f7/: bedrock.json  diamond.json  emerald.json  gold.json  obsidian.json
assets/dungeon_loot/m1/: obsidian.json  wood.json
assets/dungeon_loot/m2/: wood.json
assets/dungeon_loot/m3/: emerald.json  wood.json
assets/dungeon_loot/m4/: diamond.json  emerald.json  gold.json  obsidian.json
assets/dungeon_loot/m5/: gold.json  obsidian.json  wood.json
assets/dungeon_loot/m6/: wood.json
assets/dungeon_loot/m7/: diamond.json  emerald.json  gold.json  obsidian.json
assets/loot/b7/: bedrock.json
assets/loot/f1/: gold.json  obsidian.json  wood.json
assets/loot/f2/: wood.json
assets/loot/f3/: diamond.json  emerald.json  wood.json
assets/loot/f4/: emerald.json  obsidian.json  wood.json
src/: app.rs  catacombs.rs  catacombs_loot.rs  catacombs_loot_calculator.rs  catacombs_page.rs  images.rs  lib.rs  loot.rs  loot_calculator.rs  loot_calculator_o1.rs  loot_calculator_o2.rs  main.rs  shards.rs  slayer.rs  slayer_loot.rs  slayer_loot_calculator.rs  slayer_page.rs
src/catacombs/: catacombs_loot.rs  catacombs_loot_calculator.rs  catacombs_page.rs  options.rs  rng_meter_deselection.rs  unused_weight_math_calculator.rs
src/shards/: bazaar_api.rs  bazaar_data.rs  fusion.rs  shard_data.rs  shards_page.rs
src/slayer/: slayer_loot.rs  slayer_loot_calculator.rs  slayer_page.rs
(+64 files in other folders)
