[package]
name = "cata_calc"
version = "0.1.0"
authors = ["Pigicial"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_extras = { version = "0.31.0", features = ["file", "http", "image", "gif"] }
egui_plot = "0.31.0"
log = "0.4"
walkdir = "2.5.0"
include_dir = { version = "0.7.4", features = ["glob"] }
image = "0.25.5"
num-format = "0.4.4"
convert_case = "0.8.0"
csv = "1.3.1"
roman = "0.1.6"
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
wasm-logger = "0.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
web-time = "1.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
# rng meter calculator, native app only (because getting it to work on web ain't working right)
rand_distr = "0.5.1"
rand = "0.9.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm
debug = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
